--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>thu hh tyh </h1>
+    <div class="menu">
+        <h2>SawOn</h2>
+    </div>
+    <div class="menu">
+        <ul>
+            <li> <a href="#">Home</a> </li>
+            <li><a href="#">Theme</a></li>
+            <li><a href="#">Project</a></li>
+            <li><a href="#">Contact us</a></li>
+        </ul>
+    </div>
+
 </body>
 </html>
